--- a/mycluster/vm/example-vm.yaml
+++ b/mycluster/vm/example-vm.yaml
@@ -29,7 +29,7 @@ metadata:
   name: vm-example
   namespace: default
 spec:
-  running: false
+  running: true
   template:
     metadata:
       labels:
